# nem_desktop

./: github.xverizex.nem-desktop.json  github.xverizex.nem_desktop.json  github.xverizex.nem_desktop.metainfo.xml  io.github.xverizex.nem_desktop.json  io.github.xverizex.nem_desktop.metainfo.xml  meson.build
data/: github.xverizex.nem-desktop.appdata.xml.in  github.xverizex.nem-desktop.desktop.in  github.xverizex.nem-desktop.gschema.xml  github.xverizex.nem_desktop.appdata.xml.in  github.xverizex.nem_desktop.desktop.in  github.xverizex.nem_desktop.gschema.xml  io.github.xverizex.nem_desktop.appdata.xml.in  io.github.xverizex.nem_desktop.desktop.in  io.github.xverizex.nem_desktop.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: cert.c  file-storage.c  file-storage.h  main-window.c  main-window.h  main.c  meson.build  message-item.c  message-item.h  nem_desktop.gresource.xml  register-window.c  user-item.c
